--- a/Practica/Makefile
+++ b/Practica/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -c -g -Wall -std=gnu99
-SOURCES = bloques.c ficheros_basico.c mi_mkfs.c leer_sf.c  # Agrega aquí los .c necesarios
-LIBRARIES = bloques.o ficheros_basico.o  # Agrega otros .o 
+SOURCES = bloques.c ficheros_basico.c mi_mkfs.c leer_sf.c ficheros.c # Agrega aquí los .c necesarios
+LIBRARIES = bloques.o ficheros_basico.o  ficheros.o # Agrega otros .o 
 PROGRAMS = mi_mkfs leer_sf  # Agrega otros programas aquí
 
 OBJS = $(SOURCES:.c=.o)
