--- a/Practica/Makefile
+++ b/Practica/Makefile
@@ -1,8 +1,8 @@
 CC = gcc
 CFLAGS = -c -g -Wall -std=gnu99
-SOURCES = bloques.c ficheros_basico.c mi_mkfs.c leer_sf.c ficheros.c leer.c escribir.c permitir.c# Agrega aquí los .c necesarios
+SOURCES = bloques.c ficheros_basico.c mi_mkfs.c leer_sf.c ficheros.c leer.c escribir.c permitir.c truncar.c# Agrega aquí los .c necesarios
 LIBRARIES = bloques.o ficheros_basico.o  ficheros.o # Agrega otros .o 
-PROGRAMS = mi_mkfs leer_sf leer escribir permitir # Agrega otros programas aquí
+PROGRAMS = mi_mkfs leer_sf leer escribir permitir truncar # Agrega otros programas aquí
 
 OBJS = $(SOURCES:.c=.o)
 
