--- a/Practica/Makefile
+++ b/Practica/Makefile
@@ -2,8 +2,8 @@
 
 CC = gcc
 CFLAGS = -c -g -Wall -std=gnu99
-SOURCES = bloques.c ficheros_basico.c mi_mkfs.c leer_sf.c ficheros.c leer.c escribir.c permitir.c truncar.c# Agrega aquí los .c necesarios
-LIBRARIES = bloques.o ficheros_basico.o  ficheros.o # Agrega otros .o 
+SOURCES = bloques.c ficheros_basico.c mi_mkfs.c leer_sf.c ficheros.c leer.c escribir.c permitir.c truncar.c directorios.c# Agrega aquí los .c necesarios
+LIBRARIES = bloques.o ficheros_basico.o  ficheros.o directorios.o # Agrega otros .o 
 PROGRAMS = mi_mkfs leer_sf leer escribir permitir truncar # Agrega otros programas aquí
 
 OBJS = $(SOURCES:.c=.o)
