--- a/Practica/Makefile
+++ b/Practica/Makefile
@@ -2,9 +2,9 @@
 
 CC = gcc
 CFLAGS = -c -g -Wall -std=gnu99
-SOURCES = bloques.c ficheros_basico.c mi_mkfs.c leer_sf.c ficheros.c leer.c escribir.c permitir.c truncar.c directorios.c mi_mkdir.c mi_stat.c mi_ls.c mi_chmod.c mi_touch.c # Agrega aquí los .c necesarios
+SOURCES = bloques.c ficheros_basico.c mi_mkfs.c leer_sf.c ficheros.c leer.c escribir.c permitir.c truncar.c directorios.c mi_mkdir.c mi_stat.c mi_ls.c mi_chmod.c mi_touch.c mi_cat.c mi_escribir.c # Agrega aquí los .c necesarios
 LIBRARIES = bloques.o ficheros_basico.o  ficheros.o directorios.o # Agrega otros .o 
-PROGRAMS = mi_mkfs leer_sf leer escribir permitir truncar mi_mkdir mi_stat mi_ls mi_chmod mi_touch# Agrega otros programas aquí
+PROGRAMS = mi_mkfs leer_sf leer escribir permitir truncar mi_mkdir mi_stat mi_ls mi_chmod mi_touch mi_cat mi_escribir# Agrega otros programas aquí
 
 OBJS = $(SOURCES:.c=.o)
 
